# BreathTrack-C02

./: .$ComponenttDiagramm.drawio.dtmp  .gitignore  ComponentDiagramm.drawio  ComponenttDiagramm.drawio  Diagramm.drawio  README.md
BreathTracker/: .gitignore  ArcLeft.qml  ArcRight.qml  AveragedSensorData.qml  CMakeLists.txt  CustomLabel.qml  DataTrends.qml  FrontendTypes.h  I_Averager.h  I_FrontendAPI.h  I_Sensor.h  I_Subscriber.h  LiveData.qml  LiveDataBackground.qml  LiveDataMeter.qml  RawSensorData.qml  averager.h  buffersubscription.cpp  buffersubscription.h  circularbuffer.cpp  circularbuffer.h  databuffermanager.cpp  databuffermanager.h  emaaverager.cpp  emaaverager.h  livedataapi.cpp  livedataapi.h  main.cpp  main.qml  sensorfactory.h  sensorsimulator.cpp  sensorsimulator.h  smaaverager.cpp  smaaverager.h  subscriber.h  trenddataapi.cpp  trenddataapi.h  types.h
BreathTracker/inc/: FrontendTypes.h  I_Averager.h  I_FrontendAPI.h  averagecalculator.h  buffersubscription.h  circularbuffer.h  databuffermanager.h  emaaverager.h  frontendapi.h  i_frontendapimodule.h  i_sensor.h  i_subscriber.h  livedataapi.h  sensorfactory.h  sensorsimulator.h  smaaverager.h  trenddataapi.h  types.h
BreathTracker/qml/: ArcLeft.qml  DataTrends.qml  LiveData.qml  LiveDataBackground.qml  SettingsDrawer.qml  main.qml
BreathTracker/src/: averagecalculator.cpp  buffersubscription.cpp  circularbuffer.cpp  databuffermanager.cpp  emaaverager.cpp  frontendapi.cpp  livedataapi.cpp  main.cpp  sensorsimulator.cpp  smaaverager.cpp  trenddataapi.cpp
BreathTrackerDesign/: CMakeLists.txt  EBikeDesign.qmlproject  EBikeDesign.qmlproject.qtds  qmlmodules
BreathTrackerDesign/content/: CMakeLists.txt  qtquickcontrols2.conf
BreathTrackerDesign/imports/: CMakeLists.txt
BreathTrackerDesign/imports/EbikeData/: CMakeLists.txt
BreathTrackerDesign/imports/ebikeDesign/: CMakeLists.txt
BreathTrackerDesign/src/: import_qml_plugins.h
LinuxSoftware/: installAndRun.sh
LinuxSoftware/dynamic-linking/run-build/: CMakeCache.txt  appBreathTracker
LinuxSoftware/dynamic-linking/run-build/.cmake/api/v1/reply/: target-all_qmltyperegistrations-Release-f5c3afd0f698ccc65860.json  (+2 more)
LinuxSoftware/dynamic-linking/run-build/.qt/deploy_qml_imports/: appBreathTracker.cmake
LinuxSoftware/dynamic-linking/run-build/.qt_plugins/: Qt6_QmlPlugins_Imports_appBreathTracker.cmake
LinuxSoftware/dynamic-linking/run-build/.rcc/: appBreathTracker_raw_qml_0.qrc  qmake_BreathTracker.qrc
LinuxSoftware/dynamic-linking/run-build/.rcc/qmlcache/appBreathTracker_qml/: CircleIndicator_qml.cpp  LiveDataBackground_qml.cpp  LiveData_qml.cpp  main_qml.cpp
LinuxSoftware/dynamic-linking/run-build/BreathTracker/qml/: CustomLabel.qml  LiveData.qml  main.qml
LinuxSoftware/dynamic-linking/run-build/appBreathTracker_autogen/DIG64O274K/: moc_databuffermanager.cpp.d  moc_frontendapi.cpp.d  moc_frontendapi.cpp.json  moc_smaaverager.cpp.json
LinuxSoftware/dynamic-linking/run-build/meta_types/: appBreathTracker_json_file_list.txt
LinuxSoftware/run-build/: AppRun  appbreathtracker_qmltyperegistrations.cpp  cmake_install.cmake
LinuxSoftware/run-build/.cmake/api/v1/reply/: cache-v2-c889efe68ca1c63ccb4b.json  codemodel-v2-914f4d42668091cab3ef.json  directory-.-Release-1e7ee1bab02056451478.json  index-2024-08-28T11-35-10-0678.json  target-all_qmllint-Release-46f7ffccd26b18bb35e9.json  target-appBreathTracker_other_files-Release-cea5d44e642750e3b40a.json  target-appBreathTracker_qmlimportscan-Release-8615a29a7d17ec24ec0d.json  target-appBreathTracker_qmllint-Release-851d1f5327563f274933.json
LinuxSoftware/run-build/.qt/: QtDeploySupport.cmake
LinuxSoftware/run-build/.qt_plugins/: Qt6_QmlPlugins_Imports_appBreathTracker.cmake  Qt6_QmlPlugins_Imports_appBreathTracker.rsp
LinuxSoftware/run-build/.rcc/qmlcache/: appBreathTracker_qml_loader_file_list.rsp
LinuxSoftware/run-build/.rcc/qmlcache/appBreathTracker_qml/: ArcItem_qml.cpp  ArcLeft_qml.cpp  ArcRight_qml.cpp  CircleIndicator_qml.cpp  CustomLabel_qml.cpp  DataTrends_qml.cpp  LiveDataBackground_qml.cpp  LiveData_qml.cpp  SettingsDrawer_qml.cpp  SettingsSection_qml.cpp  main_qml.cpp
LinuxSoftware/run-build/BreathTracker/: qmldir
LinuxSoftware/run-build/BreathTracker/qml/: CircleIndicator.qml  SettingsSection.qml
LinuxSoftware/run-build/appBreathTracker_autogen/: moc_predefs.h  mocs_compilation.cpp
LinuxSoftware/run-build/appBreathTracker_autogen/DIG64O274K/: moc_FrontendTypes.cpp.d  moc_FrontendTypes.cpp.json  moc_averagecalculator.cpp.d  moc_buffersubscription.cpp.d  moc_buffersubscription.cpp.json  moc_databuffermanager.cpp.json  moc_emaaverager.cpp.d  moc_emaaverager.cpp.json  moc_i_averager.cpp.d  moc_i_averager.cpp.json  moc_i_sensor.cpp.d  moc_i_sensor.cpp.json  moc_livedataapi.cpp.d  moc_sensorsimulator.cpp.d
LinuxSoftware/run-build/meta_types/: appBreathTracker_json_file_list.txt.timestamp  qt6appbreathtracker_release_metatypes.json
LinuxSoftware/run-build/qmltypes/: appBreathTracker_foreign_types.txt
LinuxSoftware/static-linking/BreathTrackerApp/: app.desktop
LinuxSoftware/try2/: installAndRun.sh  run.sh
LinuxSoftware/try2/run-build/: qtcsettings.cmake
LinuxSoftware/try2/run-build/.rcc/qmlcache/: appBreathTracker_qmlcache_loader.cpp
LinuxSoftware/try2/run-build/.rcc/qmlcache/appBreathTracker_qml/: ArcItem_qml.cpp  CustomLabel_qml.cpp  DataTrends_qml.cpp  SettingsDrawer_qml.cpp  SettingsSection_qml.cpp
LinuxSoftware/try2/run-build/BreathTracker/qml/: ArcLeft.qml
LinuxSoftware/try2/run-build/appBreathTracker_autogen/DIG64O274K/: moc_averagecalculator.cpp.json  moc_circularbuffer.cpp.d  moc_circularbuffer.cpp.json  moc_livedataapi.cpp.json  moc_sensorsimulator.cpp.json  moc_smaaverager.cpp.d  moc_trenddataapi.cpp.d  moc_trenddataapi.cpp.json
LinuxSoftware/try2/run-build/meta_types/: appBreathTracker_json_file_list.txt.timestamp
READMEs/: 1_HowToRunProject.md  2_Project_Requirements.md  3_Architecture_and_Decisions.md  4_Frontend_and_Design.md  5_Testing.md  6_Potential_Optimizations.md  HowToRunProject.md  Project_Requirements.md
(+6 files in other folders)
